--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "bugs": {
     "url": "https://github.com/NikNikitos/long_poling_chat/issues"
   },
-  "homepage": "https://github.com/NikNikitos/long_poling_chat#readme"
-
-  
+  "homepage": "https://github.com/NikNikitos/long_poling_chat#readme",
+  "dependencies": {
+    "dotenv": "^16.0.1"
+  }
 }
